--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     command: redis-server /etc/redis.conf
 
   mysql:
+   container_name: mysql
     image: mysql:5.7.40
     environment:
       - "MYSQL_ROOT_PASSWORD=1234"  # 数据库密码，建议修改，如果修改需要同步修改bisheng/congfig/config.yaml配置
